# chatgpt-with-streamlit

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_app.py
chatgpt_with_streamlit/GetLanguageModel/: call_llm.py
chatgpt_with_streamlit/app/: main.py  streamlit_utils.py
